--- a/app/src/main/res/layout/register_plant.xml
+++ b/app/src/main/res/layout/register_plant.xml
@@ -1,39 +1,91 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:layout_editor_absoluteX="-11dp"
+    tools:layout_editor_absoluteY="45dp">
 
     <ImageView
-        android:id="@+id/imageViewPlant"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:id="@+id/imageView"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:clickable="true"
         android:onClick="selectImage"
-        android:src="@drawable/default_plant_img" />
+        android:src="@drawable/register_image"
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="66dp" />
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="식물 이름 *"
-        android:textStyle="bold" />
+        android:textSize="16dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="395dp" />
 
     <EditText
-        android:id="@+id/editTextPlantName"
+        android:id="@+id/plant_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="예) 사과나무" />
+        android:layout_height="50dp"
+        android:background="@drawable/white_edittext"
+        android:hint="예)사과나무"
+        android:paddingLeft="10dp"
+        android:textColor="#000000"
+        android:textColorHint="#A0A0A0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
+        android:id="@+id/plant_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="심은 날짜 *"
-        android:textStyle="bold" />
+        android:textSize="16dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="544dp" />
 
-    <DatePicker
-        android:id="@+id/datePickerPlantDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" /> <!-- 초기에는 숨겨진 상태로 설정 -->
+    <Button
+        android:id="@+id/date_picker_btn"
+        android:layout_width="76dp"
+        android:layout_height="38dp"
+        android:text="달력"
+        tools:layout_editor_absoluteX="296dp"
+        tools:layout_editor_absoluteY="530dp" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/plant_date_text_view"
+        android:layout_width="373dp"
+        android:layout_height="49dp"
+        android:background="@drawable/white_edittext"
+        android:hint="YYYY/MM/DD"
+        android:textColorHint="#A0A0A0"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/plant_date" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="373dp"
+        android:layout_height="49dp"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="#808080"
+        android:clickable="false"
+        android:text="완료"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
