--- a/app/src/main/res/layout/register_plant.xml
+++ b/app/src/main/res/layout/register_plant.xml
@@ -3,10 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:layout_editor_absoluteX="-11dp"
-    tools:layout_editor_absoluteY="45dp">
+    android:padding="16dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -15,8 +12,9 @@
         android:clickable="true"
         android:onClick="selectImage"
         android:src="@drawable/register_image"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="66dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
@@ -25,8 +23,8 @@
         android:text="식물 이름 *"
         android:textSize="16dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="395dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/plant_name"
@@ -37,10 +35,9 @@
         android:paddingLeft="10dp"
         android:textColor="#000000"
         android:textColorHint="#A0A0A0"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/plant_date"
@@ -49,27 +46,27 @@
         android:text="심은 날짜 *"
         android:textSize="16dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="544dp" />
+        app:layout_constraintTop_toBottomOf="@+id/plant_name"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/date_picker_btn"
         android:layout_width="76dp"
         android:layout_height="38dp"
         android:text="달력"
-        tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="530dp" />
+        app:layout_constraintTop_toTopOf="@+id/plant_date"
+        app:layout_constraintStart_toEndOf="@+id/plant_date"
+        app:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/plant_date_text_view"
         android:layout_width="373dp"
         android:layout_height="49dp"
+        android:layout_marginStart="4dp"
         android:background="@drawable/white_edittext"
         android:hint="YYYY/MM/DD"
         android:textColorHint="#A0A0A0"
         android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plant_date" />
 
@@ -77,15 +74,13 @@
         android:id="@+id/button"
         android:layout_width="373dp"
         android:layout_height="49dp"
-        android:layout_margin="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
         android:background="#808080"
         android:clickable="false"
         android:text="완료"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.578"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/plant_date_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
